<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_settings"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_volume"
        android:textColor="@color/text_subtitle"
        android:textSize="14sp" />

    <SeekBar
        android:id="@+id/sb_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:max="100"
        android:progress="70"
        android:progressTint="@color/text_training"
        android:thumbTint="@color/text_training" />

    <Button
        android:id="@+id/btn_close_settings"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_perfil"
        android:text="@string/btn_close"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
