<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ImagendeFondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_perfil" />

    <ImageView
        android:id="@+id/ImagenPerfil"
        android:layout_width="272dp"
        android:layout_height="150dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/DatosUsuario"
        android:layout_width="281dp"
        android:layout_height="174dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:autofillHints="name"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/hint_editar_perfil"
        android:inputType="textMultiLine"
        android:text="@string/text_datos_usuario"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImagenPerfil" />

    <Button
        android:id="@+id/Historial"
        android:layout_width="198dp"
        android:layout_height="104dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="92dp"
        android:text="@string/btn_historial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
